deploy/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: null
  generation: 1
  labels:
    run: cookbook-webapp
  name: cookbook-webapp
  selfLink: /apis/extensions/v1beta1/namespaces/cookbook/deployments/cookbook-webapp
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: cookbook-webapp
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        run: cookbook-webapp
    spec:
      containers:
        - name: cookbook-webapp
          image: registry.gitlab.com/gastove/cookbook/application:REPLACE
          imagePullPolicy: Always
          ports:
            - name: http-port
              containerPort: 8080
              protocol: TCP

          resources: {}

          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File

          livenessProbe:
            httpGet:
              path: /
              port: http-port
            initialDelaySeconds: 10
            periodSeconds: 300
            timeoutSeconds: 3

          readinessProbe:
            httpGet:
              path: /
              port: http-port
            initialDelaySeconds: 10
            periodSeconds: 300
            timeoutSeconds: 3

      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
