deploy/prometheus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus
spec:
  type: NodePort
  ports:
  - name: prom
    nodePort: 30900
    port: 9090
    protocol: TCP
    targetPort: prom
  selector:
    prometheus: prometheus
