deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: cookbook-webapp
  name: cookbook-webapp
  selfLink: /api/v1/namespaces/cookbook/services/cookbook-webapp
spec:
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30896
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    run: cookbook-webapp
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
