deploy/ingress.yml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: cookbook-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: gastove-blog-ip
    networking.gke.io/managed-certificates: gastove-blog-tls
spec:
  backend:
    serviceName: cookbook-webapp
    servicePort: 80
